# pruning_rl_ur5_private

./: .gitmodules  README.md  ee_pose_rosbag2_2024_02_01-14_28_48_0.csv  extract_bag_images.py  extract_ee_pose.py  transforms.txt
aruco/: package.xml  setup.py
aruco/aruco/: aruco_detection_srv.py
aruco/aruco/utils/: calibrate_camera.py  detect_aruco.py  geenrate_aruco_board.py  generate_aruco.py  generate_chessboard.py  ros_utils.py
aruco_msgs/: CMakeLists.txt  package.xml
aruco_msgs/srv/: ArucoTransform.srv
follow_the_leader/: setup.py
follow_the_leader/config/: ftl_ur5e.yaml  rl_nn_args.py  ur_servo.yaml
follow_the_leader/follow_the_leader/: controller_rl.py  controller_rl_copy.py  goal_publisher.py  image_processor.py  io_manager.py  optical_flow.py  optical_flow_srv.py  simple_state_manager.py  test.py  viz_image_mask_pair.py
follow_the_leader/follow_the_leader/networks/: .gitignore  flowgan.py  raft.py  yolov8.py
follow_the_leader/follow_the_leader/tests/: teleop.py  test_of.py
follow_the_leader/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
follow_the_leader/launch/: core_ftl_3d.launch.py  follow_the_leader.launch.py  ur_moveit.launch.py  ur_startup.launch.py
follow_the_leader/log/: latest_build
follow_the_leader_msgs/: CMakeLists.txt
follow_the_leader_msgs/msg/: OpticalFlowAndMask.msg
follow_the_leader_msgs/srv/: ChangeSegmentationModel.srv  OpticalFlowAndMask.srv
ftl_move_group_server/: CMakeLists.txt  package.xml
ftl_move_group_server/launch/: ftl_server.launch.py
ftl_move_group_server/src/: ftl_move_group_server.cpp  temp_1.cpp
rl_pruning_controller/: CMakeLists.txt  package.xml
rl_pruning_controller/launch/: rl_pruning_controller.launch.py  ur_startup.launch.py
rl_pruning_controller/rl_pruning_controller/: joy_servo.py
rl_pruning_controller/src/: jacobian_server.cpp
rl_pruning_controller_msgs/: CMakeLists.txt  package.xml
rl_pruning_controller_msgs/srv/: Jacobian.srv
(+3 files in other folders)
